--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10882,3 +10882,38 @@ a.text-dark:focus {
   }
 }
 
+.counters {
+  margin-right: 30px;
+  font-size: 10px;
+  text-align: center;
+}
+
+.counters strong {
+  display: block;
+  font-size: 2em;
+}
+
+.counters .vote,
+.counters .answer {
+  width: 60px;
+  height: 60px;
+}
+
+.counters .status.unanswered {
+  border: none;
+}
+
+.counters .status.answered {
+  border: 1px solid #008000;
+  color: #008000;
+}
+
+.counters .status.answered-accepted {
+  background: #008000;
+  color: #fff;
+}
+
+.counters .view {
+  margin-top: 10px;
+}
+
