--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10960,3 +10960,11 @@ form.form-delete {
   color: #38c172;
 }
 
+.vote-controls .post {
+  padding: 20px 0;
+}
+
+.vote-controls .post:not(:last-child) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
