--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,6 @@
+$color-white: #fff; 
 // Body
-$body-bg: #f8fafc;
+$body-bg: $color-white;
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
@@ -20,4 +21,3 @@ $cyan: #6cb2eb;
 
 $color-green: #008000;
 
-$color-white: #fff; 
